Add new product dialog error checking and listener

--- a/app/src/main/res/layout/dialog_add_new_product.xml
+++ b/app/src/main/res/layout/dialog_add_new_product.xml
@@ -79,4 +79,30 @@
             />
     </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="@dimen/dialog_margin_horizontal"
+        android:paddingEnd="@dimen/dialog_margin_horizontal"
+        >
+
+        <Button
+            android:id="@+id/btn_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:text="@string/stock_product_new_cancel"
+            style="?attr/borderlessButtonStyle"
+            />
+
+        <Button
+            android:id="@+id/btn_done"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:text="@string/stock_product_new_done"
+            style="?attr/borderlessButtonStyle"
+            />
+    </RelativeLayout>
+
 </LinearLayout>
