--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="light_grey">#ADADAD</color>
     <color name="medium_grey">#8D8D8D</color>
     <color name="dark_grey">#424242</color>
+
+    <color name="errorRed">#f44336</color>
 </resources>
