--- a/app/src/main/res/layout/fragment_exchange.xml
+++ b/app/src/main/res/layout/fragment_exchange.xml
@@ -9,8 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="@string/dashboard_title"
+        android:text="@string/exchange_title"
         />
-
 
 </LinearLayout>
