--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
         >
 
         <include
-            layout="@layout/nav_drawer"
+            android:id="@+id/nav_drawer_content"
+            layout="@layout/nav_drawer_content"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             />
