--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,10 +26,11 @@
         <item name="android:drawablePadding">16dp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:textColor">@color/dark_grey</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:drawableTint">@color/dark_grey</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
-        <item name="android:background">?attr/selectableItemBackground</item>
+        <item name="android:background">@drawable/nav_drawer_item_background</item>
     </style>
 
     <style name="EmptyView">
