nav drawer styling

--- a/app/src/main/res/layout/fragment_stock.xml
+++ b/app/src/main/res/layout/fragment_stock.xml
@@ -32,7 +32,7 @@
         app:srcCompat="@drawable/ic_add"
         app:tint="@android:color/black"
         android:backgroundTint="@color/colorAccent"
-        app:rippleColor="@color/ripple"
+        app:rippleColor="@color/fab_ripple_light"
         />
 
 </RelativeLayout>
