--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,11 +6,13 @@
     <!-- semi transparent version of colorPrimary -->
     <color name="colorPrimaryTransparent">#59673ab7</color>
 
-    <color name="light_grey">#ADADAD</color>
+    <color name="light_grey">#eeeeee</color>
+    <!-- for normal text -->
     <color name="medium_grey">#8D8D8D</color>
+    <!-- for darker text -->
     <color name="dark_grey">#424242</color>
 
     <color name="errorRed">#f44336</color>
 
-    <color name="ripple">#2fff</color>
+    <color name="fab_ripple_light">#2fff</color>
 </resources>
