--- a/app/src/main/res/drawable/nav_drawer_item_selected.xml
+++ b/app/src/main/res/drawable/nav_drawer_item_selected.xml
@@ -3,17 +3,36 @@
     android:color="?android:colorControlHighlight"
     >
     <item>
-        <shape android:shape="rectangle">
-            <solid
-                android:color="@color/colorPrimaryTransparent"
-                />
-            <corners
-                android:radius="8dp"
-                />
-            <stroke
-                android:color="@android:color/white"
-                android:width="4dp"
-                />
-        </shape>
+        <!--<shape android:shape="rectangle">-->
+            <!--<solid-->
+                <!--android:color="@color/colorPrimaryTransparent"-->
+                <!--/>-->
+            <!--<corners-->
+                <!--android:radius="8dp"-->
+                <!--/>-->
+            <!--<stroke-->
+                <!--android:color="@color/colorPrimary"-->
+                <!--android:width="1dp"-->
+                <!--/>-->
+        <!--</shape>-->
+        <layer-list>
+            <item>
+                <shape>
+                    <padding
+                        android:left="6dp"
+                        />
+                    <solid
+                        android:color="@color/colorPrimary"
+                        />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <solid
+                        android:color="@color/light_grey"
+                        />
+                </shape>
+            </item>
+        </layer-list>
     </item>
 </ripple>
