refactor colours into theme attrs

--- a/app/src/main/res/drawable/divider.xml
+++ b/app/src/main/res/drawable/divider.xml
@@ -6,7 +6,7 @@
     <size android:height="1px" />
 
     <solid
-        android:color="@color/medium_grey"
+        android:color="?attr/dividerColor"
         />
 
 </shape>
