--- a/app/src/main/res/drawable/nav_drawer_item_selected.xml
+++ b/app/src/main/res/drawable/nav_drawer_item_selected.xml
@@ -3,34 +3,16 @@
     android:color="?android:colorControlHighlight"
     >
     <item>
-        <!--<shape android:shape="rectangle">-->
-            <!--<solid-->
-                <!--android:color="@color/colorPrimaryTransparent"-->
-                <!--/>-->
-            <!--<corners-->
-                <!--android:radius="8dp"-->
-                <!--/>-->
-            <!--<stroke-->
-                <!--android:color="@color/colorPrimary"-->
-                <!--android:width="1dp"-->
-                <!--/>-->
-        <!--</shape>-->
         <layer-list>
             <item>
                 <shape>
-                    <padding
-                        android:left="6dp"
-                        />
-                    <solid
-                        android:color="@color/colorPrimary"
-                        />
+                    <padding android:left="6dp" />
+                    <solid android:color="?attr/colorPrimary" />
                 </shape>
             </item>
             <item>
                 <shape>
-                    <solid
-                        android:color="@color/light_grey"
-                        />
+                    <solid android:color="?attr/selectedItemBackgroundColor" />
                 </shape>
             </item>
         </layer-list>
