--- a/app/src/main/res/layout/fragment_exchange.xml
+++ b/app/src/main/res/layout/fragment_exchange.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="8dp"
     >
 
     <!-- top row with primary and secondary currencies, swap btn -->
@@ -21,7 +22,7 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:gravity="end|center_vertical"
-            android:text="GBP"
+            tools:text="GBP"
             />
 
         <ImageView
@@ -43,24 +44,24 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:gravity="start|center_vertical"
-            android:text="HKD"
+            tools:text="HKD"
             />
     </LinearLayout>
 
     <!-- main view showing current rate -->
     <LinearLayout
         android:id="@+id/rate"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/current_currencies"
-        android:layout_toStartOf="@id/currency_spinner_right"
-        android:layout_toEndOf="@id/currency_spinner_left"
         android:orientation="horizontal"
-        android:paddingStart="16dp"
-        android:paddingTop="40dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="40dp"
         >
+
+        <NumberPicker
+            android:id="@+id/currency_picker_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
 
         <TextView
             style="@style/ExchangeRateText.Primary"
@@ -89,31 +90,26 @@
             android:gravity="start|center_vertical"
             android:text="2.35"
             />
+
+        <NumberPicker
+            android:id="@+id/currency_picker_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
     </LinearLayout>
 
-    <Spinner
-        android:id="@+id/currency_spinner_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/current_currencies"
-        android:layout_alignParentStart="true"
-        />
 
-    <Spinner
-        android:id="@+id/currency_spinner_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/current_currencies"
-        android:layout_alignParentEnd="true"
-        />
+
+
+
 
     <LinearLayout
         android:id="@+id/conversion_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/rate"
-        android:layout_toStartOf="@id/currency_spinner_right"
-        android:layout_toEndOf="@id/currency_spinner_left"
+        android:layout_toStartOf="@id/currency_picker_right"
+        android:layout_toEndOf="@id/currency_picker_left"
         android:orientation="vertical"
         >
 
