--- a/app/src/main/res/layout/fragment_exchange.xml
+++ b/app/src/main/res/layout/fragment_exchange.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     >
 
     <!-- top row with primary and secondary currencies, swap btn -->
@@ -13,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="16dp"
         >
 
         <TextView
@@ -20,20 +22,20 @@
             style="@style/ExchangeCurrentCurrency"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:gravity="end|center_vertical"
             tools:text="GBP"
             />
 
         <ImageView
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
             android:focusable="true"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
+            android:padding="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             app:srcCompat="@drawable/ic_swap"
             />
 
@@ -42,7 +44,7 @@
             style="@style/ExchangeCurrentCurrency"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:gravity="start|center_vertical"
             tools:text="HKD"
             />
@@ -63,6 +65,7 @@
             android:layout_height="wrap_content"
             />
 
+        <!-- todo allow user input -->
         <TextView
             style="@style/ExchangeRateText.Primary"
             android:layout_width="0dp"
@@ -77,9 +80,9 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:text=":"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="@string/exchange_currency_separator"
             />
 
         <TextView
@@ -98,57 +101,11 @@
             />
     </LinearLayout>
 
-    <LinearLayout
+    <com.martinwalls.nea.CustomRecyclerView
         android:id="@+id/conversion_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/rate"
-        android:orientation="vertical"
-        >
-
-        <TextView
-            style="@style/ExchangeHistoryTimeDivider"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="2 days ago"
-            />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            >
-
-            <TextView
-                style="@style/ExchangeHistoryItemText"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="end|center_vertical"
-                android:text="30.00 GBP"
-                />
-
-            <TextView
-                style="@style/ExchangeHistoryItemText"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:text=":"
-                />
-
-            <TextView
-                style="@style/ExchangeHistoryItemText"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="start|center_vertical"
-                android:text="150.00 PLN"
-                />
-        </LinearLayout>
-
-    </LinearLayout>
+        />
 
 </RelativeLayout>
