--- a/app/src/main/res/layout/fragment_exchange.xml
+++ b/app/src/main/res/layout/fragment_exchange.xml
@@ -13,8 +13,8 @@
         android:id="@+id/current_currencies"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="16dp"
+        android:orientation="horizontal"
         >
 
         <TextView
@@ -30,12 +30,12 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
             android:focusable="true"
             android:padding="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             app:srcCompat="@drawable/ic_swap"
             />
 
@@ -102,10 +102,22 @@
     </LinearLayout>
 
     <com.martinwalls.nea.CustomRecyclerView
-        android:id="@+id/conversion_history"
+        android:id="@+id/exchange_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/rate"
+        android:overScrollMode="never"
+        />
+
+    <TextView
+        android:id="@+id/no_exchange_history"
+        style="@style/ExchangeHistoryItemText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rate"
+        android:gravity="center"
+        android:text="@string/exchange_no_history"
+        android:visibility="gone"
         />
 
 </RelativeLayout>
