--- a/app/src/main/res/layout/nav_drawer_content.xml
+++ b/app/src/main/res/layout/nav_drawer_content.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:divider="@drawable/divider"
+    android:divider="@drawable/divider_thin"
     android:showDividers="middle"
     >
 
