--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,4 +21,8 @@
     <dimen name="search_result_margin_left">24dp</dimen>
     <dimen name="search_result_margin_right">16dp</dimen>
 
+    <dimen name="choose_currencies_spacing">16dp</dimen>
+    <dimen name="choose_currencies_margin_left">24dp</dimen>
+    <dimen name="choose_currencies_margin_right">16dp</dimen>
+
 </resources>
