--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -120,8 +120,20 @@
         <item name="android:textColor">?attr/textColorNormal</item>
     </style>
 
-    <style name="ChooseCurrenciesItem.Star">
-        <item name="android:drawableEnd">@drawable/ic_star_outline</item>
+    <style name="ChooseCurrenciesListTitle">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">?colorPrimary</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
+
+
+    <!--<style name="ChooseCurrenciesItem.NoFav">-->
+        <!--<item name="android:drawableEnd">@drawable/ic_star_outline</item>-->
+    <!--</style>-->
+
+    <!--<style name="ChooseCurrenciesItem.Fav">-->
+        <!--<item name="android:drawableEnd">@drawable/ic_star_filled</item>-->
+    <!--</style>-->
 
 </resources>
