--- a/app/src/main/res/layout/item_choose_currencies.xml
+++ b/app/src/main/res/layout/item_choose_currencies.xml
@@ -1,12 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    style="@style/ChooseCurrenciesItem.Star"
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingStart="@dimen/choose_currencies_margin_left"
-    android:paddingTop="@dimen/choose_currencies_spacing"
-    android:paddingEnd="@dimen/choose_currencies_margin_right"
-    android:paddingBottom="@dimen/choose_currencies_spacing"
-    tools:text="GBP"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    >
+
+    <TextView
+        android:id="@+id/currency_text"
+        style="@style/ChooseCurrenciesItem"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:paddingStart="@dimen/choose_currencies_margin_left"
+        android:paddingTop="@dimen/choose_currencies_spacing"
+        android:paddingEnd="@dimen/choose_currencies_margin_right"
+        android:paddingBottom="@dimen/choose_currencies_spacing"
+        tools:text="GBP"
     />
+
+    <ImageButton
+        android:id="@+id/favourite_star"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_star_outline"
+        android:layout_gravity="center_vertical"
+        android:background="?selectableItemBackgroundBorderless"
+        android:padding="2dp"
+        android:layout_marginEnd="14dp"
+        />
+
+    </LinearLayout>
